test-suite/tests/ui/designated/missing_attribute.stderr
error: no parameter is designated
 --> tests/ui/designated/missing_attribute.rs:4:17
  |
4 | pub struct Test<S>;
  |                 ^

error: no parameter is designated
 --> tests/ui/designated/missing_attribute.rs:7:6
  |
7 | impl<S> Test<S> {}
  |      ^
